--- a/banner/banner.conf
+++ b/banner/banner.conf
@@ -1,13 +1,1 @@
-</strong> <p style="text-align:center"><b> <br><font 
-color="#00FFE2"<br>┏━━━━━━━━━━━━━━━┓<br>NETWORK 
-TWEAKER<br>┗━━━━━━━━━━━━━━━┛<br></font><br><font 
-color="#00FF00"></strong> <p style="text-align:center"><b> <br><font 
-color="#00FFE2">क═══════क⊹⊱✫⊰⊹क═══════क</font><br><font 
-color='#FFFF00'><b> ★ [ ༆Hʸᵖᵉʳ᭄W̺͆E̺͆L̺͆C̺͆O̺͆M̺͆E̺͆ T̺͆O̺͆ M̺͆Y̺͆ S̺͆E̺͆R̺͆V̺͆E̺͆R̺͆ V͇̿I͇̿P͇̿ ] ★ 
-</b></font><br><font color="#FFF00">PAID SCRIPT</font><br> <font color="#FF00FF">❖Ƭʜᴇ No DDOS</font><br> 
-<font color="#FF0000">❖Ƭʜᴇ No Torrent</font><br> <font 
-color="#FFB1C2">❖Ƭʜᴇ No Bokep </font><br> <font color="#FFFFFF">❖Ƭʜᴇ No 
-Hacking</font><br> <font color="#00FF00">❖Ƭʜᴇ No Mining</font><br> <font 
-color="#00FF00">▄︻デN̷E̷T̷W̷O̷R̷K̷ ̷T̷W̷E̷A̷K̷E̷R̷══━一 </font><br> <font 
-color="#00FFE2">क═══════क⊹⊱✫⊰⊹क═══════क</font><br></font><br><font 
-color="FFFF00">@networktweakerop</font><br>
+<font color='green'><b>!!! WELCOME !!!*<b></font><br><font color='red'><b> 🦋⃝🐠༄●⃝➥PAID SCRIPT</b></font><br><font color='red'><b>🦋⃝🐠༄●⃝➥NO DDOS</b></font><br><font color='red'><b>🦋⃝🐠༄●⃝➥NO TORANT</b></font><br><font color='red'><b>🦋⃝🐠༄●⃝➥NO HACKING</b></font><br><font color='red'><b>🦋⃝🐠༄●⃝➥NO MINING</b></font><br><font color="red"><b>🦋⃝🐠༄●⃝➥NO BOKEP</b></font><br><font color="green"><b>===============================</br></font><br><font color='#1500FF'><b>𝙁𝙄𝙇𝙀 𝘾𝙍𝙀𝘼𝙏𝙀𝘿 𝘽𝙔 :- 𝙄𝙏𝙕-𝙎𝙄𝙔𝘼 & 𝘿𝘼𝙍𝙆-𝘽𝙊𝙔<b></font><br><font color='red'><b><br>••<a href="https://t.me/freenetjiovi">🇧 🇱 4🇨 🇰  🇭 4🇹  🇳 🇪 🇹 🇼 🇴 🇷 🇰••<br></b><font><br
